Fix issue where app data would not be loaded until the user edits something - Add default dice to hover in the encounter view for quick access - Improve combatant item layout

--- a/main.css
+++ b/main.css
@@ -46,3 +46,14 @@ button {
     padding-right: 4px;
     padding-left: 4px;
 }
+
+input {
+    padding: 8px 4px;
+    font-size: large;
+    background: transparent;
+    border-bottom: 1px solid white;
+}
+
+input:hover {
+    border-bottom: 2px solid white;
+}
