--- a/styles.css
+++ b/styles.css
@@ -542,6 +542,18 @@ video {
   position: relative;
 }
 
+.bottom-3 {
+  bottom: 0.75rem;
+}
+
+.left-3 {
+  left: 0.75rem;
+}
+
+.right-3 {
+  right: 0.75rem;
+}
+
 .col-span-1 {
   grid-column: span 1 / span 1;
 }
@@ -578,24 +590,20 @@ video {
   height: 3.5rem;
 }
 
-.h-full {
-  height: 100%;
-}
-
-.h-\[83\.5vh\] {
-  height: 83.5vh;
-}
-
-.h-\[82\.5vh\] {
-  height: 82.5vh;
-}
-
 .h-\[80vh\] {
   height: 80vh;
 }
 
+.h-full {
+  height: 100%;
+}
+
 .min-h-\[40px\] {
   min-height: 40px;
+}
+
+.w-20 {
+  width: 5rem;
 }
 
 .w-full {
@@ -634,6 +642,10 @@ video {
   justify-content: center;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
 .gap-2 {
   gap: 0.5rem;
 }
@@ -644,10 +656,6 @@ video {
 
 .gap-8 {
   gap: 2rem;
-}
-
-.gap-1 {
-  gap: 0.25rem;
 }
 
 .overflow-y-auto {
@@ -671,18 +679,9 @@ video {
   border-width: 1px;
 }
 
-.border-b {
-  border-bottom-width: 1px;
-}
-
 .border-yellow-500 {
   --tw-border-opacity: 1;
   border-color: rgb(234 179 8 / var(--tw-border-opacity));
-}
-
-.border-b-white {
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .bg-red-800 {
@@ -698,10 +697,6 @@ video {
 .bg-zinc-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(24 24 27 / var(--tw-bg-opacity));
-}
-
-.bg-transparent {
-  background-color: transparent;
 }
 
 .p-0 {
@@ -732,17 +727,26 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .pl-6 {
   padding-left: 1.5rem;
 }
 
-.pb-0 {
-  padding-bottom: 0px;
+.align-top {
+  vertical-align: top;
+}
+
+.text-\[1\.5rem\] {
+  font-size: 1.5rem;
 }
 
 .text-lg {
@@ -750,26 +754,14 @@ video {
   line-height: 1.75rem;
 }
 
-.text-\[3rem\] {
-  font-size: 3rem;
-}
-
-.text-\[2\.5rem\] {
-  font-size: 2.5rem;
-}
-
-.text-\[1\.5rem\] {
-  font-size: 1.5rem;
-}
-
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
@@ -875,6 +867,13 @@ button {
   padding-left: 4px;
 }
 
-.hover\:border-b-2:hover {
-  border-bottom-width: 2px;
+input {
+  padding: 8px 4px;
+  font-size: large;
+  background: transparent;
+  border-bottom: 1px solid white;
+}
+
+input:hover {
+  border-bottom: 2px solid white;
 }
