--- a/main.css
+++ b/main.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+label {
+    display: flex;
+    align-items: center;
+    gap: 0.2rem;
+}
+
+button {
+    padding: 0.5rem 1rem;
+}
+
 .ht {
     color: darkred;
     font-weight: 600;
